# fintech_hw01_weather

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
tests/: conftest.py
tests/weather/: test_cache.py  test_html_requests.py  test_parser.py
weather/: __main__.py  cache.py  config.py  html_requests.py  parser.py
